# Sun-Shaft

./: .env  .gitignore  Cargo.toml  README.md  db_init.sh
libs/enum-derive/: Cargo.toml
libs/enum-derive/src/: lib.rs
libs/gpu/: Cargo.toml
libs/gpu/src/: card.rs  card_facade.rs  lib.rs
migrations/: 20241128013052_init.down.sql  20241128013052_init.up.sql  20241207172132_users.down.sql  20241207172132_users.up.sql
scripts/: db_start.sh
src/: config.rs  main.rs
src/enums/: permission.rs
src/middleware/: auth.rs  logger.rs  mod.rs  permission.rs
src/model/: base.rs  error.rs  mod.rs  schema.rs
src/model/schemas/: mod.rs
src/model/schemas/media_management/: items.rs
src/model/schemas/user_management/: permissions.rs  users.rs
src/route/: error.rs  mod.rs  state.rs
src/route/routes/: auth.rs  collection.rs  hello_world.rs  media_item.rs  media_row.rs  mod.rs  steam.rs
src/route/routes/media/: collection.rs  item.rs  mod.rs
src/route/routes/users/: mod.rs  permission_levels.rs
src/routes/: game.rs  hello_world.rs  media.rs  media_row.rs  mod.rs  steam.rs
src/services/: ctx.rs  display.rs  jwt.rs  media.rs  mod.rs  path.rs  permissions.rs  response.rs  user.rs
src/util/: fs.rs  stream.rs
