[package]
name = "Sun-Shaft"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
steamworks = "0.11.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
gpu = { path = "libs/gpu" }
raw-window-handle = "0.6.2"
ffmpeg-next = "7.1.0"
